Try fix problem with layout on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,6 @@
   //background-color: rgba(252, 233, 121, 1);
 }
 
-body {
-  background-color: rgba(240, 240, 240, 1);
-}
-
 h1 {
   font-weight: 700;
   font-size: 3rem;
